--- a/index.html
+++ b/index.html
@@ -19,199 +19,213 @@
   <body>
     <!-- =============================== HEADER =============================== -->
     <header class="page-header">
-      <nav class="page-nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-color">Studio</span></a
-        >
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="./index.html">Studio </a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts" id="contacts">
-        <ul>
-          <li>
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container page-header-container">
+        <nav class="page-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-color">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html">Studio </a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts" id="contacts">
+          <ul class="contacts-list">
+            <li>
+              <a class="contact-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- =============================== HERO =============================== -->
       <section class="hero-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="order-button" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="order-button" type="button">Order Service</button>
+        </div>
       </section>
       <!-- =============================== BENEFITS =========================== -->
-      <section>
-        <h2>Our benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Strategy</h3>
-            <p class="benefits-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Punctuality</h3>
-            <p class="benefits-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Diligence</h3>
-            <p class="benefits-item-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Technologies</h3>
-            <p class="benefits-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="benefits-title">Our benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Strategy</h3>
+              <p class="benefits-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Punctuality</h3>
+              <p class="benefits-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Diligence</h3>
+              <p class="benefits-item-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Technologies</h3>
+              <p class="benefits-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- =============================== TEAM ===============================  -->
-      <section class="team-section">
-        <h2 class="team-title" id="team">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              src="./images/img-3.jpg"
-              width="264"
-              height="260"
-              alt="Mark Guerrero photo"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/img-2.jpg"
-              width="264"
-              height="260"
-              alt="Tom Ford photo"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/img-1.jpg"
-              width="264"
-              height="260"
-              alt="Camila Garcia photo"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              src="./images/img.jpg"
-              width="264"
-              height="260"
-              alt="Daniel Wilson photo"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="team-title section-title" id="team">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                src="./images/img-3.jpg"
+                width="264"
+                height="260"
+                alt="Mark Guerrero photo"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/img-2.jpg"
+                width="264"
+                height="260"
+                alt="Tom Ford photo"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/img-1.jpg"
+                width="264"
+                height="260"
+                alt="Camila Garcia photo"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                src="./images/img.jpg"
+                width="264"
+                height="260"
+                alt="Daniel Wilson photo"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- =============================== PORTFOLIO ========================== -->
-      <section>
-        <h2 class="portfolio-title" id="portfolio">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li>
-            <img
-              src="./images/img-5.jpg"
-              width="360"
-              height="300"
-              alt="bank app photo"
-            />
-            <h3 class="portfolio-list-title">Banking App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-4.jpg"
-              width="360"
-              height="300"
-              alt="cashless payment photo"
-            />
-            <h3 class="portfolio-list-title">Cashless Payment</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-6.jpg"
-              width="360"
-              height="300"
-              alt="meditation app photo"
-            />
-            <h3 class="portfolio-list-title">Meditation App</h3>
-            <p class="portfolio-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-9.jpg"
-              width="360"
-              height="300"
-              alt="taxi service photo"
-            />
-            <h3 class="portfolio-list-title">Taxi Service</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-8.jpg"
-              width="360"
-              height="300"
-              alt="screen illustrations photo"
-            />
-            <h3 class="portfolio-list-title">Screen Illustrations</h3>
-            <p class="portfolio-list-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-7.jpg"
-              width="360"
-              height="300"
-              alt="online courses photo"
-            />
-            <h3 class="portfolio-list-title">Online Courses</h3>
-            <p class="portfolio-list-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="portfolio-title section-title" id="portfolio">
+            Our Portfolio
+          </h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-5.jpg"
+                width="360"
+                height="300"
+                alt="bank app photo"
+              />
+              <h3 class="portfolio-list-title">Banking App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-4.jpg"
+                width="360"
+                height="300"
+                alt="cashless payment photo"
+              />
+              <h3 class="portfolio-list-title">Cashless Payment</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-6.jpg"
+                width="360"
+                height="300"
+                alt="meditation app photo"
+              />
+              <h3 class="portfolio-list-title">Meditation App</h3>
+              <p class="portfolio-list-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-9.jpg"
+                width="360"
+                height="300"
+                alt="taxi service photo"
+              />
+              <h3 class="portfolio-list-title">Taxi Service</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-8.jpg"
+                width="360"
+                height="300"
+                alt="screen illustrations photo"
+              />
+              <h3 class="portfolio-list-title">Screen Illustrations</h3>
+              <p class="portfolio-list-text">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/img-7.jpg"
+                width="360"
+                height="300"
+                alt="online courses photo"
+              />
+              <h3 class="portfolio-list-title">Online Courses</h3>
+              <p class="portfolio-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- =============================== FOOTER =============================== -->
     <footer class="page-footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-logo-color">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a class="logo" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
