--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- =============================== BENEFITS =========================== -->
       <section class="section">
         <div class="container">
-          <h2 class="benefits-title">Our benefits</h2>
+          <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-item-title">Strategy</h3>
@@ -108,8 +108,10 @@
                 height="260"
                 alt="Mark Guerrero photo"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
+              <div class="team-container">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -118,8 +120,10 @@
                 height="260"
                 alt="Tom Ford photo"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-position">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -128,8 +132,10 @@
                 height="260"
                 alt="Camila Garcia photo"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-position">Marketing</p>
+              <div class="team-container">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -138,8 +144,10 @@
                 height="260"
                 alt="Daniel Wilson photo"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-position">UI Designer</p>
+              <div class="team-container">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -158,8 +166,10 @@
                 height="300"
                 alt="bank app photo"
               />
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -168,8 +178,10 @@
                 height="300"
                 alt="cashless payment photo"
               />
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -178,8 +190,10 @@
                 height="300"
                 alt="meditation app photo"
               />
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -188,8 +202,10 @@
                 height="300"
                 alt="taxi service photo"
               />
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -198,8 +214,10 @@
                 height="300"
                 alt="screen illustrations photo"
               />
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -208,8 +226,10 @@
                 height="300"
                 alt="online courses photo"
               />
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
+              <div class="category-container">
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -218,7 +238,7 @@
     <!-- =============================== FOOTER =============================== -->
     <footer class="page-footer">
       <div class="container footer-container">
-        <a class="logo" href="./index.html"
+        <a class="logo footer-logo" href="./index.html"
           >Web<span class="footer-logo-color">Studio</span></a
         >
         <p class="footer-text">
